docs: add delete opening documentation
